nodejs services/goodbye-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: goodbye
spec:
  selector:
    app: goodbye
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
