nodejs services/goodbye-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: goodbyeingress
spec:
  rules:
  - host: goodbye.local
    http:
      paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: goodbye
              port:
                number: 80
