nodejs services/hello-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-ingress
spec:
  rules:
  - host: hello.local
    http:
      paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: hello
              port:
                number: 80
